--- a/membership.html
+++ b/membership.html
@@ -218,9 +218,9 @@
                             </div>
                         </div><!-- end col-11 -->
                     </div> <!-- end class row -->
-                <br class="clear">
+                    <br class="clear">
                 
-                <div class="row" style="background-color: #F6931E;">
+                    <div class="row" style="background-color: #F6931E;">
                     <div class="col-11">
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
@@ -293,7 +293,7 @@
                     </div>
                 </div>
                 <br class="clear">
-                </div><!-- end-content -->
+               <!-- </div> end-content -->
 
 
                 <br class="clear">
@@ -397,7 +397,7 @@
                         <img id="plane-background" src="./img/plane-background.png" width="935px">
                     </div>
                 </div>
-            </div><!-- end-content -->
+           <!-- </div> end-content -->
             <div class="row" style="background-color: #66d4ff">
                 <div class="col-12">
                     <h2>Follow Us</h2>
