--- a/membership.html
+++ b/membership.html
@@ -133,15 +133,11 @@
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html"
-                                            title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html"
-                                            title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html"
-                                            title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                    </li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
@@ -202,13 +198,11 @@
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a>
-                                    </li>
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                    </li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
                             </nav>
                             <!--</div> removed and replaced with </nav>-->
@@ -231,16 +225,12 @@
                         </div><!-- end_left-col -->
                         <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                             <ul><!--start of menu list-->
-                                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a>
-                                </li>
-                                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                <li class="btn"><a href="index[1].html"
-                                        title="Frequently Asked Questions">Information</a></li>
-                                <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a>
-                                </li>
-                                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                </li>
-                            </ul><!--end of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
                         </nav>
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
@@ -269,16 +259,12 @@
                         </div><!-- end_left-col -->
                         <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                             <ul><!--start of menu list-->
-                                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a>
-                                </li>
-                                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                <li class="btn"><a href="index[1].html"
-                                        title="Frequently Asked Questions">Information</a></li>
-                                <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a>
-                                </li>
-                                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                </li>
-                            </ul><!--end of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
                         </nav>
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
@@ -309,16 +295,12 @@
                         </div><!-- end_left-col -->
                         <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                             <ul><!--start of menu list-->
-                                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a>
-                                </li>
-                                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                <li class="btn"><a href="index[1].html"
-                                        title="Frequently Asked Questions">Information</a></li>
-                                <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a>
-                                </li>
-                                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                </li>
-                            </ul><!--end of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
                         </nav>
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
@@ -345,16 +327,12 @@
                         </div><!-- end_left-col -->
                         <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                             <ul><!--start of menu list-->
-                                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a>
-                                </li>
-                                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                <li class="btn"><a href="index[1].html"
-                                        title="Frequently Asked Questions">Information</a></li>
-                                <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a>
-                                </li>
-                                <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a>
-                                </li>
-                            </ul><!--end of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
                         </nav>
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
