--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -189,7 +189,7 @@
                         <nav class="data" id="html5-style-2nav"><!--use the semantic tag <nav>-->
                             <ul><!--start of menu list-->
                                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                <li class="btn"><a href="inline-block.html" title="Location Maps">Maps</a></li>
                                 <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                 <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                 <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
