--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <link rel="stylesheet" href="style[1].css"> -->
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
         <link rel="stylesheet" href="./nav[1].css">
-        <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
--->
+		
+        <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> -->
+		
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
         <link rel="icon" type="image/png" href="./weed.jpg">
@@ -52,21 +53,19 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-    </script>
-    <script src="./js/jquery.mobile-1.0.1.min.js"></script>
-    <script type="text/javascript" src="../assets/js/ui.js"></script>
-    <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-        crossorigin="anonymous"></script>
-    <!--Add conditional Javascript-->
-    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src=" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script src="./js/jquery.mobile-1.0.1.min.js"></script>
+        <script type="text/javascript" src="../assets/js/ui.js"></script>
+        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <!--Add conditional Javascript-->
+        <!--[if lte IE 8]>
             <script src="js/html5.js" type="text/javascript"></script>
         <![endif]-->
-</head>
+    </head>
     <body>
 		<div class="wrapper">
         <img class="logo" src="./img/flexy-logo.png">
