--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <link rel="icon" type="image/png" href="./flexy-logo.png">
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
         <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
-        <!-- Font Awesome Icons -->
+        <!-- Font Awesome Icons --
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
