--- a/index.html
+++ b/index.html
@@ -121,72 +121,6 @@
                             <img src="img/kite.png">
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
-                                    width="300">
-                                <br>
-                                <p>The superb interior of one of our cottages</p>
-                            </div><!-- end_left-col -->
-                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                                <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list-->
-                            </nav>
-                            <!--</div> removed and replaced with </nav>-->
-                            <div class="data" id="html5style2midcol">
-                                <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
-                                    width="398">
-                            </div>
-                        </div><!-- end-col-12 -->
-                    </div><!-- end-.row -->
-                    <br class="clear">
-
-                    <div class="row">
-                        <div class="çol-12" padding="2%">
-                            <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2>
-                        </div><!-- end-col-12 -->
-                    </div><!-- end-row -->
-                    <br class="clear">
-                    <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
-                        <div class="çol-12">
-                            <img src="img/paper.png">
-                            <br>
-                            <div class="data" id="html5style2leftcol">
-                                <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
-                                    width="300">
-                                <br>
-                                <p>The superb interior of one of our cottages</p>
-                            </div><!-- end_left-col -->
-                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                                <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list-->
-                            </nav>
-                            <!--</div> removed and replaced with </nav>-->
-                            <div class="data" id="html5style2midcol">
-                                <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
-                                    width="398">
-                            </div>
-                        </div><!-- end-col-12 -->
-                    </div> <!-- end class row -->
-                    <br class="clear">
-
-                    <div class="row" style="background-color: #F6931E;">
-                        <div class="col-11">
-                            <h2>Get ready for take off.</h2>
-                            <br>
-                            <div class="data" id="html5style2leftcol">
-                                <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
                                 <br>
                                 <p>The superb interior of one of our cottages</p>
@@ -205,6 +139,69 @@
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
                             </div>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                    <br class="clear">
+
+                    <div class="row">
+                        <div class="çol-12" padding="2%">
+                            <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-row -->
+                    <br class="clear">
+                    <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
+                        <div class="çol-12">
+                            <img src="img/paper.png">
+                            <br>
+                            <div class="data" id="html5style2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-1.jpg" width="300">
+                                <br>
+                                <p>The superb interior of one of our cottages</p>
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-2.jpg" height="229"
+                                    width="398">
+                            </div>
+                        </div><!-- end-col-12 -->
+                    </div> <!-- end class row -->
+                    <br class="clear">
+
+                    <div class="row" style="background-color: #F6931E;">
+                        <div class="col-11">
+                            <h2>Get ready for take off.</h2>
+                            <br>
+                            <div class="data" id="html5style2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-3.jpg" width="300">
+                                <br>
+                                <p>The superb interior of one of our cottages</p>
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
+                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                                </ul><!--end of menu list-->
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229" width="398">
+                            </div>
                         </div><!-- end col-11 -->
                     </div> <!-- end class row -->
                     <br class="clear">
@@ -213,7 +210,7 @@
                     <div class="col-11">
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
@@ -230,7 +227,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                            <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229"
                                 width="398">
                         </div>
                         <div class="col-3">
@@ -247,7 +244,7 @@
                         <h2>We're flying around the globe</h2>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-7.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
