--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                            <img title="Devon countryside" alt="Devon countryside" src="./bda-8.jpg" height="229"
                                 width="398">
                         </div>
 
@@ -297,7 +297,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                            <img title="Devon countryside" alt="Devon countryside" src="./bda-9.jpg" height="229"
                                 width="398">
                         </div>
 
@@ -312,7 +312,7 @@
                         <h2>In just 42 hours and 27 minutes</h2>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-10.jpg.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
@@ -329,7 +329,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                            <img title="Devon countryside" alt="Devon countryside" src="./bda-11.jpg" height="229"
                                 width="398">
                         </div>
                         <div class="col-3">
@@ -515,7 +515,7 @@
                                     
 				<div data-role="content" class="data" id="html5-ch1-7content">
                     <b><p id="no-script">We recommend that you have JavaScript enabled!</p></b>
-                    <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+                    <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                     <div class="row">
                         <div class="col-12">
                             <img src="img/kite.png">
