--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <h2>In just 42 hours and 27 minutes</h2>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-10.jpg.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-10.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
