--- a/index.html
+++ b/index.html
@@ -235,47 +235,40 @@
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list-->
+                                </ul>
+                                <!--end of menu list-->
                             </nav>
-                            <!--</div> removed and replaced with </nav>-->
+                                <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229" width="398">
                             </div>
-                        </div><!-- end col-11 -->
-                    </div> <!-- end class row -->
-                    <br class="clear">
-                
-                    <div class="row" style="background-color: #F6931E;">
-                    <div class="col-11">
-                        <div class="data" id="html5style2leftcol">
-                            <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg"
-                                width="300">
-                            <br>
-                            <p>The superb interior of one of our cottages</p>
-                        </div><!-- end_left-col -->
-                        <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                            <ul><!--start of menu list-->
+                            <div class="data" id="html5style2leftcol">
+                                <h3>Cottages, converted barns, caravans</h3>
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg" width="300">
+                                <br>
+                                <p>The superb interior of one of our cottages</p>
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                                 </ul><!--end of menu list-->
-                        </nav>
-                        <!--</div> removed and replaced with </nav>-->
-                        <div class="data" id="html5style2midcol">
-                            <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229"
-                                width="398">
-                        </div>
-                        <div class="col-3">
-                            <img class="circle" src="img/orange-globe.png">
+                            </nav>
+                            <!--</div> removed and replaced with </nav>-->
+                            <div class="data" id="html5style2midcol">
+                                <h3>Situated in the BDA's beautiful countryside</h3>
+                                <img title="Devon countryside" alt="Devon countryside" src="./bda-6.jpg" height="229" width="398">
+                            </div>                       
+                            <div class="col-3">
+                                <img class="circle" src="img/orange-globe.png">
 
-                        </div> <!-- end col-3 -->
-                    </div><!-- end col-11 -->
-                </div> <!-- end class row -->
+                            </div> <!-- end col-3 -->
+                        </div><!-- end col-11 -->
+                    </div> <!-- end class row -->
             
        <!-- </div> end col-12 -->
                 <br class="clear">
