--- a/index.html
+++ b/index.html
@@ -109,10 +109,9 @@
         <div class="row">
             <div class="col-12" style="padding: 2%">
                 <div class="data" id="html5-ch1-7content">
-                    <h2 id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!</h2>
                     <div id="banner">
                         <div id="banner-wrapper">
-                            <h2 class="dark" id="html5-ch1-7h2"> </h2>
+                            <h2 class="dark" id="html5-ch1-7h2">Award winning accommodation, self catering or bed and breakfast </h2>
                             <p id="no-script">We recommend that you have JavaScript enabled!</p>
                         </div>
                     </div>
@@ -146,26 +145,6 @@
                     <div class="row">
                         <div class="çol-12" padding="2%">
                             <!-- <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2> -->
-                             <div class="data" id="html5style2leftcol">
-                                <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
-                                <br>
-                                <p>The superb interior of one of our cottages</p>
-                            </div><!-- end_left-col -->
-                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
-                                <ul><!--start of menu list-->
-                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list-->
-                            </nav>
-                            <!--</div> removed and replaced with </nav>-->
-                            <div class="data" id="html5style2midcol">
-                                <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
-                            </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-row -->
                     <br class="clear">
