--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
                                 <br>
-                                <p>The superb interior of one of our cottages</p>
+                                The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
@@ -156,7 +156,7 @@
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-1.jpg" width="300">
                                 <br>
-                                <p>The superb interior of one of our cottages</p>
+                                The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
@@ -205,7 +205,7 @@
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-3.jpg" width="300">
                                 <br>
-                                <p>The superb interior of one of our cottages</p>
+                                The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
@@ -226,7 +226,7 @@
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-5.jpg" width="300">
                                 <br>
-                                <p>The superb interior of one of our cottages</p>
+                                The superb interior of one of our cottages
                             </div><!-- end_left-col -->
                             <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                                 <ul><!--start of menu list-->
@@ -259,7 +259,7 @@
                             <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-7.jpg"
                                 width="300">
                             <br>
-                            <p>The superb interior of one of our cottages</p>
+                            The superb interior of one of our cottages
                         </div><!-- end_left-col -->
                         <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
                             <ul><!--start of menu list-->
