--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
                     <div id="banner">
                         <div id="banner-wrapper">
                             <h2 class="dark" id="html5-ch1-7h2">Award winning accommodation, self catering or bed and breakfast </h2>
-                            <p id="no-script">We recommend that you have JavaScript enabled!</p>
                         </div>
                     </div>
                     <div class="row">
@@ -144,7 +143,7 @@
 
                     <div class="row">
                         <div class="çol-12" padding="2%">
-                            <!-- <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2> -->
+                            <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2> 
                         </div><!-- end-col-12 -->
                     </div><!-- end-row -->
                     <br class="clear">
